# M2

./: .gitignore  .gitmodules  CMakeLists.txt  FindZeroMQ.cmake  M2.kdev4  materia.db
Actions/: CMakeLists.txt  main.cpp
Calendar/: CMakeLists.txt  main.cpp
Central/: CMakeLists.txt  ComponentGateway.cpp  ComponentGateway.hpp  main.cpp
Client/: Actions.hpp  Admin.hpp  CMakeLists.txt  Calendar.hpp  Container.cpp  Container.hpp  Database.hpp  Events.cpp  Events.hpp  IActions.hpp  IAdmin.hpp  ICalendar.hpp  IContainer.hpp  IDatabase.hpp  IEvents.hpp  IInbox.hpp  IJournal.hpp  IStrategy.hpp  Id.cpp  Id.hpp  Inbox.cpp  Journal.cpp  MateriaClient.cpp  MateriaClient.hpp  MateriaServiceProxy.hpp  RemoteCollection.hpp  Strategy.cpp  Strategy.hpp  ZmqPbChannel.cpp
Client/private/: Actions.cpp  Actions.hpp  Admin.cpp  Admin.hpp  Calendar.cpp  Calendar.hpp  Container.cpp  Container.hpp  Database.cpp  Database.hpp  Events.cpp  Events.hpp  Id.cpp  Inbox.cpp  Inbox.hpp  Journal.cpp  Journal.hpp  MateriaClient.cpp  ProtoConverter.cpp  ProtoConverter.hpp  Strategy.cpp  Strategy.hpp
Common/: Base64.cpp  Base64.hpp  CMakeLists.txt  Codec.cpp  Codec.hpp  Id.cpp  Id.hpp  InterprocessService.hpp  MateriaServiceProxy.hpp  Password.cpp  Password.hpp  PortLayout.hpp  ServiceWrapper.hpp  Utils.cpp  Utils.hpp  ZmqPbChannel.cpp  ZmqPbChannel.hpp  ZmqPbController.hpp
Common/messages/: CMakeLists.txt  actions.proto  admin.proto  calendar.proto  challenge.proto  common.proto  container.proto  database.proto  events.proto  finance.proto  freedata.proto  inbox.proto  journal.proto  reward.proto  strategy.proto
Container/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  IBackuper.hpp  ICalendar.hpp  IChallenge.hpp  ICore.hpp  ICore3.hpp  IFinance.hpp  IFreeData.hpp  IInbox.hpp  IJournal.hpp  IReward.hpp  IStrategy.hpp  IStrategy_v2.hpp  Id.hpp  Makefile  NodeAttributes.hpp  cmake_install.cmake
Core/private/: Backuper.cpp  Backuper.hpp  Calendar.cpp  Calendar.hpp  Challenge.cpp  Challenge.hpp  CommandParser.cpp  CommandParser.hpp  Commands.cpp  Commands.hpp  ConnectionType.hpp  Connections.cpp  Connections.hpp  Core.cpp  Core.hpp  Core3.cpp  Core3.hpp  Database.cpp  Database.hpp  EmptyValueProvider.cpp  EmptyValueProvider.hpp  ExceptionsUtil.hpp  Expressions.cpp  Expressions.hpp  Expressions2.cpp  Expressions2.hpp  Finance.cpp  Finance.hpp  FreeData.cpp  FreeData.hpp  FreeDataInterpreter.cpp  FreeDataInterpreter.hpp  Goal.cpp  Goal.hpp  ISubsystem.hpp  Id.cpp  Inbox.cpp  Inbox.hpp  Journal.cpp  Journal.hpp  (+41 more)
Core3/: CMakeLists.txt  Core.cpp  Core.hpp  Database.cpp  Database.hpp  Json.cpp  Json.hpp  Logger.cpp  Object.cpp  Object.hpp  Session.cpp  Session.hpp  Transport.cpp  Transport.hpp
Core3/persistent/: ObjectManager.cpp  ObjectManager.hpp
Core3/types/: ListObject.cpp  ListObject.hpp  TextObject.cpp  TextObject.hpp
Ctrl/: CMakeLists.txt  Makefile  cmake_install.cmake  m2ctrl  main.cpp
Database/: CMakeLists.txt  main.cpp
Events/: CMakeLists.txt  main.cpp
Inbox/: CMakeLists.txt  main.cpp
Journal/: CMakeLists.txt  main.cpp
Profile/: CMakeLists.txt  main.cpp
Server/: AdminServiceImpl.hpp  CMakeLists.txt  CalendarServiceImpl.hpp  ChallengeServiceImpl.hpp  FinanceServiceImpl.hpp  FreeDataServiceImpl.hpp  InboxServiceImpl.hpp  JournalServiceImpl.hpp  Makefile  ProtoConvertion.cpp  ProtoConvertion.hpp  RewardServiceImpl.hpp  ServiceWrapper.hpp  StrategyServiceImpl.hpp  cmake_install.cmake  m2server  main.cpp
Shell/: AdminServiceProvicer.cpp  AdminServiceProvider.hpp  CMakeLists.txt  IMateriaServiceProvider.hpp  MessageFactory.cpp  MessageFactory.hpp  TShellMateriaServiceProvider.hpp  main.cpp
Strategy/: CMakeLists.txt  RemoteCollection.hpp  main.cpp  main.cpp.old1
Test/: ActionServiceHighLevelTest.cpp  AdminServiceHighLevelTest.cpp  CMakeLists.txt  CalendarServiceHighLevelTest.cpp  CalendarTest.cpp  ChallengeTest.cpp  ChestAndItemsTest.cpp  ConnectionsTest.cpp  ContainerTest.cpp  ContractsTest.cpp  Core3Test.cpp  CoreTest.cpp  DatabaseServiceHighLevelTest.cpp  DatabaseTest.cpp  EncDecTest.cpp  EventsTest.cpp  ExpressionsTest.cpp  ExpressionsTest2.cpp  FinanceTest.cpp  FreeDataTest.cpp  IdeasTest.cpp  InboxServiceHighLevelTest.cpp  InboxTest.cpp  JournalServiceTest.cpp  JournalTest.cpp  Makefile  NewAPITest.cpp  ObjectTest.cpp  RewardTest.cpp  ScriptingTest.cpp  ScriptsTest.cpp  Strategy2Test.cpp  Strategy3Test.cpp  StrategyGraphTest.cpp  StrategyTest.cpp  TestEventListener.hpp  TestHelpers.cpp  TestHelpers.hpp  TestServiceProvider.hpp  TraitsTest.cpp  (+5 more)
WebApp/: ActionsView.cpp  ActionsView.hpp  CMakeLists.txt  CalendarView.cpp  CalendarView.hpp  ChallengeView.cpp  ChallengeView.hpp  CommonDialogManager.cpp  CommonDialogManager.hpp  DatabaseView.cpp  DatabaseView.hpp  FilesView.cpp  FilesView.hpp  FinanceView.cpp  FinanceView.hpp  GoalsComboBox.hpp  InboxView.cpp  InboxView.hpp  JournalView.cpp  JournalView.hpp  MainScreen.cpp  MainScreen.hpp  MainView.cpp  MainView.hpp  MateriaClient.cpp  MateriaClient.hpp  MateriaServiceProvider.hpp  RewardView.cpp  RewardView.hpp  RewardsSmartPage.cpp  RewardsSmartPage.hpp  SharedFilesView.cpp  SharedFilesView.hpp  StrategyView.cpp  StrategyView.hpp  TaskEditDialog.hpp  TemplateBuilder.cpp  TemplateBuilder.hpp  WebApp.cpp  WebApp.hpp  (+5 more)
WebApp/dialog/: CommonDialogManager.cpp  CommonDialogManager.hpp  Dialog.cpp  Dialog.hpp
WebApp/materia/: CalendarModel.cpp  CalendarModel.hpp  ChallengeModel.cpp  ChallengeModel.hpp  FinanceModel.cpp  FinanceModel.hpp  FreeDataModel.cpp  FreeDataModel.hpp  InboxModel.cpp  InboxModel.hpp  JournalModel.cpp  JournalModel.hpp  MateriaServiceProxy.hpp  RewardModel.cpp  RewardModel.hpp  StrategyModel.cpp  StrategyModel.hpp  ZmqPbChannel.cpp  ZmqPbChannel.hpp
WebApp/strategy/: GoalViewCtrl.cpp  GoalViewCtrl.hpp  GoalsComboBox.cpp  GoalsComboBox.hpp  GraphEditDialog.cpp  GraphEditDialog.hpp  GraphView.cpp  GraphView.hpp  (+4 more)
legacy/: CMakeLists.txt  main.cpp
legacy_migrate_db/: CMakeLists.txt  main.cpp
restore/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  main.cpp
tools4/: CMakeLists.txt  main.cpp
(+388 files in other folders)
